--- a/sky-server/src/main/resources/application.yml
+++ b/sky-server/src/main/resources/application.yml
@@ -12,6 +12,11 @@ spring:
     username: root
     password: 2004129ljy
 
+  servlet:
+    multipart:
+      max-file-size: 10MB
+      max-request-size: 30MB
+
 mybatis:
   #mapper配置文件
   mapper-locations: classpath:mapper/*.xml
@@ -36,3 +41,8 @@ sky:
     admin-ttl: 7200000
     # 设置前端传递过来的令牌名称
     admin-token-name: token
+  aliyun:
+    oss:
+      bucket-name: oss-sky-take-out-ljy
+      endpoint: oss-cn-hangzhou.aliyuncs.com
+      region: cn-hangzhou
