--- a/sky-server/pom.xml
+++ b/sky-server/pom.xml
@@ -86,10 +86,10 @@
             <version>4.0.1</version> <!-- 或者使用你的 Servlet 版本 -->
             <scope>provided</scope>
         </dependency>
-        <dependency>
-            <groupId>com.github.xiaoymin</groupId>
-            <artifactId>knife4j-spring-boot-starter</artifactId>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>com.github.xiaoymin</groupId>-->
+<!--            <artifactId>knife4j-spring-boot-starter</artifactId>-->
+<!--        </dependency>-->
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
