--- a/sky-server/src/main/resources/application.yml
+++ b/sky-server/src/main/resources/application.yml
@@ -4,14 +4,21 @@ server:
 spring:
   profiles:
     active: dev
+
   main:
     allow-circular-references: true
+
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/sky_take_out
     username: root
     password: 2004129ljy
-
+    url: jdbc:mysql://localhost:3306/sky_take_out
+  data:
+    redis:
+      host: "localhost"
+      port: 6379
+      database: 0
+      password: 2004129ljy
   servlet:
     multipart:
       max-file-size: 10MB
@@ -41,8 +48,16 @@ sky:
     admin-ttl: 7200000
     # 设置前端传递过来的令牌名称
     admin-token-name: token
+    user-secret-key: ljy
+    user-token-name: authentication
+    user-ttl: 7200000
   aliyun:
     oss:
       bucket-name: oss-sky-take-out-ljy
       endpoint: oss-cn-hangzhou.aliyuncs.com
       region: cn-hangzhou
+
+  wechat:
+    appid: wxd804973b0c9d6efe
+    secret: 29d6f96ee5c23ff9bbecba8f2c381fc7
+
