订单功能补充及配送距离计算功能

--- a/sky-server/src/main/resources/application.yml
+++ b/sky-server/src/main/resources/application.yml
@@ -61,3 +61,6 @@ sky:
     appid: wxd804973b0c9d6efe
     secret: 29d6f96ee5c23ff9bbecba8f2c381fc7
 
+  shop:
+    address: 广西壮族自治区桂林市灵川县桂林电子科技大学(花江校区)学生公寓C区北
+  ak: TV8GtMYZ8k3VbKLkS4dUXbRfyfO90fov
